feat: add rest endpoints for functionality (#34)
